<resources>
    <string name="app_name">Silahe Momin</string>
    <string name="app_name_urdu">اَلسَّلامُ عَلَيْكَ يا اَبا عَبدِالله الْحُسَيْن</string>
    <!--Home page button's Text-->
    <string name="home_dua_button">مخصوص\n دعائيں</string>
    <string name="home_ziarat_button">مخصوص\n زیارتيں</string>
    <string name="home_surah_button">منتخب\n قرانی سوره</string>
    <string name="home_ramzan_button">ماہ رمضان کے\n مخصوص اعمال</string>
    <string name="home_rajab_button">ماہ رجب کے\n مخصوص اعمال</string>
    <string name="home_shaban_button">ماہ شعبان کے\n مخصوص اعمال</string>
    <string name="home_qurani_dua_button">قرآن میں بیان\n شدہ دعائیں</string>
    <string name="home_aza"> محرم اور\n صفر کے اعمال</string>
    <string name="qurani_dua_button">قرآن میں بیان\n شدہ دعائیں</string>
    <string name="home_contact_us">ہم سے رابطہ کیجیۓ</string>

    <!--Dua page button's Text-->
    <string name="duas_dua_kumail_button">دعا ئے  کمیل</string>
    <string name="duas_dua_tawassul_button">دعا ئے  توسل</string>
    <string name="duas_dua_joshan_kabeer_button">دعا ئے  جوشن کبیر</string>
    <string name="duas_dua_samat_button">دعا ئے سمات</string>
    <string name="duas_dua_mujeer_button">دعا ئے مجییر</string>
    <string name="duas_dua_iftitah_button">دعا ئے افتتاح</string>
    <string name="duas_dua_nudbah_button">دعا ئے ندبہ</string>
    <string name="duas_dua_arafah_button">دعا ئے عرفہ</string>

    <string name="duas_dua_abu_hamza_thumali_button">دعا ئے ابو حمزہ ثمالی</string>
    <string name="duas_dua_imam_zamana_button">دعا ئے  امام زمانه</string>

    <!--Dua page button's Text-->
    <string name="duas_dua_abuhamzapart1_button">حصه اول</string>
    <string name="duas_dua_abuhamzapart2_thumali_button">حصه دوم</string>
    <string name="duas_dua_abuhamzapart3_button">حصه سوم</string>

    <!--Ziarat page button's Text-->
    <string name="ziarat_waresa_button">زیارت وارثه</string>
    <string name="ziarat_ashura_button">زیارت عاشورا</string>
    <string name="ziarat_imam_hussain_shabe_qadr_button">شب های قدر مین زیارت  حسین</string>
    <string name="ziarat_hazrat_ali_ibn_hussain_button">زیارت حضرت علی ابن الحسین </string>
    <string name="ziarat_saere_shohada_button">زیارت سائر شهدا </string>
    <string name="ziarat_hazrat_abbas__button">زیارت حضرت عباس بن امیرالمومنین </string>

    <!--Surah page button's Text-->
    <string name="surah_Ankabut_button"> سوره عنکبوت </string>
    <string name="surah_room_button"> سوره روم </string>
    <string name="surah_dukhan_button"> سوره دخان </string>
    <string name="surah_rehman_button"> سوره رحمان </string>
    <string name="surah_yaseen_button"> سوره یاسین </string>

    <!--Amale shabe Qadr page button's Text-->
    <string name="amaleshabeqadr_mushtarka_amal_button">اعمال مشترکہ شب ہای قدر </string>
    <string name="amaleshabeqadr_shabe_unnis_amal_button">انیسویں  رات کے اعمال اور دعا</string>
    <string name="amaleshabeqadr_shabe_ikkis_amal_button">اکیسویں رات کے اعمال اور دعا</string>
    <string name="amaleshabeqadr_shabe_teyyes_amal_button">تئیسویں رات کے اعمال اور دعا</string>
    <string name="amaleshabeqadr_shabe_sattaes_amal_button">مناجات حضرت امیرالمومنین(ع)</string>


    <!--Amale Rajab page button's Text-->
    <string name="amalerajab_pheliRat_button">رجب کی پہلی رات </string>
    <string name="amalerajab_shabe27_button">ستائیس رجب کی رات</string>
    <string name="amalesrajab_mushtareka_button">اعمال مشترکہ ماہ رجب</string>
    <string name="amalesrajab_ziarat_rajabea_button">زیارت رجبیہ </string>
    <string name="amalesrajab_tera_to_pandra_button">۱۳ سے ۱۵ رج تک کے مخصوص اعمال</string>
    <string name="amalesrajab_amale_umme_dawood_button">اعمال ام داؤد</string>


    <!--Amale Shaban page button's Text-->
    <string name="amaleShaban_tesriShaban_button">تیسری شعبان کا دن</string>
    <string name="amaleShaban_nimeShaban_button">اعمال نیمہ شعبان</string>
    <string name="amaleShaban_mushtareka_button">ماہ شعبان کے مشترکہ اعمال</string>


    <!--Mukhtalif Amal  page button's Text-->
    <string name="Mukhtalif_amale"> مختلف اعمال</string>
    <string name="Mukhtalif_amale_shabe_jummah">   اعمال شب جمعہ</string>
    <string name="Mukhtalif_amale_roz_jummah">  اعمال روز جمعہ</string>
    <string name="Mukhtalif_amale_shabe_eid">   اعمال شب عیدالفطر</string>
    <string name="Mukhtalif_amale_roz_eid">   اعمال روز عیدالفطر</string>


    <string name="Muharram_pheli_rat"> پہلی محرم کی رات</string>
    <string name="Muharram_phela_din">پہلی محرم کا دن</string>
    <string name="Muharram_shabe_ashur"> شب عاشور</string>
    <string name="Muharram_roze_ashur"> روز عاشور</string>
    <string name="Muharram_tisra_din">تیسری محرم کا دن</string>
    <string name="Muharram_nine_din"> نویں محرم کا دن</string>
    <string name="Safar_attaes"> ۲۸ صفر </string>
    <string name="Safar_chehlum"> چهلم امام حسین (ع) </string>

    <string name="settings">ترتیب</string>

    <string name="majlis">اسلامک ویدیوز</string>
    <string name="topics">موضوعات</string>

    <string name="live_karbala">لايو كربلا</string>
    <string name="live_najaf">لايو نجف</string>
    <string name="live_makkah">لايو مکه مکرمه</string>
    <string name="live_madinah">لايو مدینه منوره</string>
    <string name="live_kazmain">لايو کاظمین</string>

    <string name="YoutubeAPIKey">AIzaSyARixdr7ie1gUEgu3JWNVxAR94Lw4uhTA0</string>
    <string name="admmode_live_ziarat_award_id">ca-app-pub-2985848238387199/5477549087</string>
    <string name="bannerAdId">ca-app-pub-2985848238387199/7497313864</string>
    <string name="bannerAdTestId">ca-app-pub-3940256099942544/6300978111</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    /*molana names*/
    <string name="molana_ali_murtaza_zaidi">مولانا علی مرتضی زیدی</string>
    <string name="molana_shehensha_hussain_naqvi">مولانا شهنشاه حسین نقوی</string>
    <string name="molana_zakki_baqri">مولانا ذکی باقری</string>
    <string name="molana_talib_johri">اغا طالب جوهری</string>
    <string name="molana_ali_raza_rizvi">مولانا علی رضا رضوی</string>
    <string name="molana_raza_dawoodani">مولانا محمد رضا داودانی</string>
    <string name="molana_muhammad_kumail_mehdavi">مولانا کمیل مهدوی</string>
    <string name="molana_kalbe_sadiq">مولانا کلب صادق</string>
    <string name="molana_shahi_raza_kashfi">مولانا شاهد رضا کاشفی</string>
    <string name="molana_aqeel_gharavi">مولانا عقیل غروی</string>
    <string name="molana_sadiq_hasan">مولانا صادق حسن</string>


</resources>
