<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:id="@+id/dualayout"
    style="@style/MianLayout"
    android:weightSum="3" >


    <ScrollView
        style="@style/HomeScrollViewlayout"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <LinearLayout style="@style/HomeMainButtonLayout">

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickDuaeKuamil" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_kumail_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickDuaeTawssul" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_tawassul_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"

                        android:onClick="onClickDuaeNudbah" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_nudbah_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickDuaeIftitah" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_iftitah_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickDuaeMujeer" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_mujeer_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickDuaeSamat" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_samat_button" />
                </RelativeLayout>


                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickDuaeJoshanKabir" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_joshan_kabeer_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickDuaeAbuHamza" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_abu_hamza_thumali_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickDuaeArafah" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_arafah_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="10dp"
                        android:onClick="onClickDuaeImamZamana" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/duas_dua_imam_zamana_button" />
                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView
                android:id="@+id/dua_adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                android:layout_centerInParent="true"
                ads:adUnitId="ca-app-pub-2985848238387199/7497313864">
            </com.google.android.gms.ads.AdView>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
