<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:id="@+id/dualayout"
    style="@style/MianLayout"
    android:weightSum="3" >


    <ScrollView
        style="@style/HomeScrollViewlayout"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <LinearLayout style="@style/HomeMainButtonLayout">

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickMuharrampheliRat" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/Muharram_pheli_rat" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickMuharrampheldin" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/Muharram_phela_din" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"

                        android:onClick="onClickMuharramtisradin" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/Muharram_tisra_din" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickMuharramninedin" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/Muharram_nine_din" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickMuharramsahbeashur" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/Muharram_shabe_ashur" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickMuharramrozeashu" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/Muharram_roze_ashur" />
                </RelativeLayout>


                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickSafarChehlum" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/Safar_chehlum" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickSafarAttaes" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/Safar_attaes" />
                </RelativeLayout>




            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView
                android:id="@+id/dua_adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                android:layout_centerInParent="true"
                ads:adUnitId="ca-app-pub-2985848238387199/7497313864">
            </com.google.android.gms.ads.AdView>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
