<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MianLayout"
    android:id="@+id/amalrajablaayout">



    <ScrollView style="@style/HomeScrollViewlayout"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <LinearLayout style="@style/HomeMainButtonLayout"
                >

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView style="@style/HomeMainImageView"
                        android:onClick="onClickRajabPheliRat"/>

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/amalerajab_pheliRat_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickMushtarekaAmal"
                        />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:textSize="12dp"
                        android:text="@string/amalesrajab_mushtareka_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView style="@style/HomeMainImageView"
                        android:onClick="onClickZiratRajabea"/>

                    <TextView
                        style="@style/HomeMainTextView"
                        android:textSize="12dp"
                        android:text="@string/amalesrajab_ziarat_rajabea_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickTeratoPandra"
                        android:layout_marginTop="20dp" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:textSize="12dp"
                        android:text="@string/amalesrajab_tera_to_pandra_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView style="@style/HomeMainImageView"
                        android:onClick="onClickUmmeDawood"/>

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/amalesrajab_amale_umme_dawood_button"
                        android:textSize="12dp"
                        />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
