<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/surahlayout"
    style="@style/MianLayout"
    android:weightSum="3">


    <ScrollView
        style="@style/HomeScrollViewlayout"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/HomeMainButtonLayout"

                >

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickSurahAnkabut" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/surah_Ankabut_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickSurahRoom" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/surah_room_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickSurahDhukahn" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/surah_dukhan_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickSurahRehman" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/surah_rehman_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickSurahYaseen" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/surah_yaseen_button" />
                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.gms.ads.AdView
                android:id="@+id/surah_adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                android:layout_centerInParent="true"
                ads:adUnitId="ca-app-pub-2985848238387199/9111817863">
            </com.google.android.gms.ads.AdView>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
